src/styles/index.scss
@font-face {
  font-family: Nunito;
  src: url("/public/assets/fonts/Nunito-Bold.ttf");
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
}

body {
  font-family: Nunito, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  background-image: url("/public/assets/blue-space.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  overflow-x: scroll;
}

button {
  cursor: pointer;
  border: 0;
  font: inherit;
}

#root {
  height: 100%;
}

